--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "hubot-slack": "^3.3.0"
   },
   "scripts": {
+    "preinstall": "npm install -g mocha coffee-script npm@2.0.0 watch",
     "localbot": "node_modules\\.bin\\hubot.cmd --name mr.overlord %*",
-    "test": "mocha --compilers coffee:coffee-script/register"
+    "mocha": "mocha --compilers coffee:coffee-script/register",
+    "watchtest": "watch \"npm run mocha -- ./test\" ./test"
   },
   "engines": {
     "node": "0.10.x"
@@ -29,7 +31,6 @@
   "devDependencies": {
     "chai": "^3.2.0",
     "hubot-mock-adapter": "^1.0.0",
-    "mock-hubot": "^1.0.6",
-    "coffee-script": "latest"
+    "mock-hubot": "^1.0.6"
   }
 }
