--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "self-preinstall": "npm install -g mocha npm@2.0.0 watch",
     "localbot": "node_modules\\.bin\\hubot.cmd --name mr.overlord %* || node_modules/.bin/hubot",
     "mocha": "mocha --compilers coffee:coffee-script/register",
+    "test":"mocha --compilers coffee:coffee-script/register -- ./test",
     "watchtest": "watch \"npm run mocha -- ./test\" ./test"
   },
   "engines": {
