--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "hubot-slack": "^3.3.0"
   },
   "scripts": {
-    "preinstall":"npm install -g coffee-script",
+    "preinstall": "npm install -g coffee-script",
     "self-preinstall": "npm install -g mocha npm@2.0.0 watch",
     "localbot": "node_modules\\.bin\\hubot.cmd --name mr.overlord %* || node_modules/.bin/hubot",
     "mocha": "mocha --compilers coffee:coffee-script/register",
-    "test":"mocha --compilers coffee:coffee-script/register -- ./test",
+    "test": "mocha --compilers coffee:coffee-script/register -- ./test",
     "watchtest": "watch \"npm run mocha -- ./test\" ./test"
   },
   "engines": {
@@ -33,6 +33,7 @@
   "devDependencies": {
     "chai": "^3.2.0",
     "hubot-mock-adapter": "^1.0.0",
-    "mock-hubot": "^1.0.6"
+    "mock-hubot": "^1.0.6",
+    "node-youtu-be": "^1.0.1"
   }
 }
