--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "hubot-rules": "^0.1.1",
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
-    "hubot-slack": "^3.3.0"
+    "hubot-slack": "^3.3.0",
+    "node-youtu-be": "^1.0.1"
   },
   "scripts": {
     "preinstall": "npm install -g coffee-script",
@@ -33,7 +34,6 @@
   "devDependencies": {
     "chai": "^3.2.0",
     "hubot-mock-adapter": "^1.0.0",
-    "mock-hubot": "^1.0.6",
-    "node-youtu-be": "^1.0.1"
+    "mock-hubot": "^1.0.6"
   }
 }
