--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hubot-scripts": "^2.16.2",
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^3.3.0",
+    "lodash": "^3.10.1",
     "node-youtu-be": "^1.0.1"
   },
   "scripts": {
