--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "watchtest": "watch \"npm run mocha -- ./test\" ./test"
     },
     "engines": {
-        "node": "0.10.x"
+        "node": "6.0.0"
     },
     "devDependencies": {
         "chai": "^3.2.0",
